--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
     "i18n-he": "ng xi18n --out-file=locale/messages.he.xlf --i18nFormat=xlf --local he",
     "i18n-es": "ng xi18n --out-file=locale/messages.es.xlf --i18nFormat=xlf --local es",
 
-    "i18n-build": "ng build --aot --locale en --out-file src/locale/messages.xlf --i18n-format xlf",
+    "i18n-build-en": "ng build --aot --locale en --out-file src/locale/messages.en.xlf --i18n-format xlf",
+    "i18n-build-he": "ng build --aot --locale he --out-file src/locale/messages.he.xlf --i18n-format xlf",
+    "i18n-build-es": "ng build --aot --locale es --out-file src/locale/messages.es.xlf --i18n-format xlf",
 
-    "i18n-start-en": "ng serve --aot --locale en --i18n-file src/locale/messages.en.xlf --i18n-format xlf",
-    "i18n-start-he": "ng serve --aot --locale he --i18n-file src/locale/messages.he.xlf --i18n-format xlf",
-    "i18n-start-es": "ng serve --aot --locale es --i18n-file src/locale/messages.es.xlf --i18n-format xlf"
+    "i18n-ngc-en": "ngc --i18nFile=./src/locale/messages.en.xlf --locale=en --i18nFormat=xlf",
+    "i18n-ngc-he": "ngc --i18nFile=./src/locale/messages.he.xlf --locale=he --i18nFormat=xlf",
+    "i18n-ngc-es": "ngc --i18nFile=./src/locale/messages.es.xlf --locale=es --i18nFormat=xlf",
+
+    "i18n-start-en": "ng serve --locale en --i18n-file src/locale/messages.en.xlf --i18n-format xlf",
+    "i18n-start-he": "ng serve --locale he --i18n-file src/locale/messages.he.xlf --i18n-format xlf",
+    "i18n-start-es": "ng serve --locale es --i18n-file src/locale/messages.es.xlf --i18n-format xlf",
+
+    "i18n-start-en-aot": "ng serve --aot --locale en --i18n-file src/locale/messages.en.xlf --i18n-format xlf",
+    "i18n-start-he-aot": "ng serve --aot --locale he --i18n-file src/locale/messages.he.xlf --i18n-format xlf",
+    "i18n-start-es-aot": "ng serve --aot --locale es --i18n-file src/locale/messages.es.xlf --i18n-format xlf"
   },
   "private": true,
   "dependencies": {
